# nodedb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  docker-entrypoint.sh
.config/: nextest.toml
.github/workflows/: release.yml  sync-fork.yml  test.yml
docs/: README.md  architecture.md  columnar.md  getting-started.md  graph.md  lite.md  offline-sync-patterns.md  protocols.md  query-language.md  security.md  spatial.md  timeseries.md  vectors.md
docs/ai/: README.md  agent-memory.md  cdc-inference-triggers.md  evaluation-tracking.md  (+6 more)
nodedb/: Cargo.toml
nodedb-client/: Cargo.toml
nodedb-client/src/: lib.rs  remote.rs  remote_parse.rs  traits.rs
nodedb-client/src/native/: client.rs  connection.rs  pool.rs  response_parse.rs
nodedb-cluster/: Cargo.toml
nodedb-cluster/src/: bootstrap.rs  catalog.rs  circuit_breaker.rs  cluster_info.rs  conf_change.rs  distributed_join.rs  error.rs  forward.rs  ghost_sweeper.rs  health.rs  lib.rs  lifecycle.rs  lifecycle_state.rs  migration.rs  migration_executor.rs  multi_raft.rs  raft_loop.rs  raft_storage.rs  rebalance.rs  routing.rs  routing_liveness.rs  rpc_codec.rs  topology.rs  vshard_handler.rs  wire.rs
nodedb-cluster/src/bootstrap/: bootstrap_fn.rs  config.rs  handle_join.rs  join.rs  mod.rs  probe.rs  restart.rs  start.rs
nodedb-cluster/src/catalog/: core.rs  ghosts.rs  migration.rs  mod.rs  ops.rs  schema.rs
nodedb-cluster/src/decommission/: coordinator.rs  flow.rs  mod.rs  observer.rs  safety.rs
nodedb-cluster/src/distributed_document/: bm25_global.rs
nodedb-cluster/src/distributed_spatial/: coordinator.rs  geofence.rs  merge.rs  mod.rs  shard_routing.rs
nodedb-cluster/src/distributed_timeseries/: coordinator.rs
nodedb-cluster/src/distributed_vector/: coordinator.rs  merge.rs  mod.rs
nodedb-cluster/src/metadata_group/: actions.rs  applier.rs  cache.rs  codec.rs  entry.rs  mod.rs  state.rs
nodedb-cluster/src/metadata_group/descriptors/: api_key.rs  audit_retention.rs  change_stream.rs  collection.rs  common.rs  function.rs  grant.rs  index.rs  lease.rs  materialized_view.rs  mod.rs  procedure.rs  rls.rs  role.rs  schedule.rs  sequence.rs  tenant.rs  trigger.rs  user.rs
nodedb-cluster/src/multi_raft/: core.rs
nodedb-cluster/src/raft_loop/: handle_rpc.rs  join.rs  loop_core.rs  mod.rs  tick.rs
nodedb-cluster/src/rebalancer/: driver.rs  elastic.rs  metrics.rs  mod.rs  plan.rs
nodedb-cluster/src/rpc_codec/: cluster_mgmt.rs  discriminants.rs  execute.rs  header.rs  metadata.rs  mod.rs  peer_seq.rs  raft_msgs.rs  raft_rpc.rs  vshard.rs
nodedb-cluster/src/swim/: bootstrap.rs  config.rs  error.rs  incarnation.rs  mod.rs
nodedb-cluster/src/swim/detector/: mod.rs  probe_round.rs  runner.rs  scheduler.rs  suspicion.rs  transport.rs
nodedb-cluster/src/swim/member/: mod.rs  record.rs  state.rs
nodedb-cluster/src/swim/membership/: list.rs  merge.rs  mod.rs
nodedb-cluster/src/swim/wire/: authenticated.rs  codec.rs  message.rs  mod.rs  probe.rs
nodedb-cluster/src/transport/: client.rs  server.rs
nodedb-cluster/src/transport/client/: send.rs
nodedb-cluster/tests/: decommission_flow.rs  elastic_scaling.rs  metadata_replication.rs  rebalancer_loop.rs  swim_routing_invalidation.rs  swim_udp_convergence.rs  transport_security.rs
nodedb-cluster/tests/common/: mod.rs
nodedb-codec/: Cargo.toml
nodedb-columnar/: Cargo.toml
nodedb-document/: Cargo.toml
nodedb-document/src/: fuzzy.rs  lib.rs  text_analyzer.rs
nodedb-fts/: Cargo.toml
nodedb-fts/src/: bm25.rs  fuzzy.rs  highlight.rs  lib.rs  posting.rs
nodedb-fts/src/analyzer/: mod.rs  ngram.rs  pipeline.rs  registry.rs  standard.rs  synonym.rs
nodedb-fts/src/analyzer/language/: mod.rs  stemmer.rs  stop_words.rs
nodedb-fts/src/analyzer/language/cjk/: segmenter.rs
nodedb-fts/src/backend/: memory.rs  mod.rs  traits.rs
nodedb-fts/src/index/: mod.rs  stats.rs  writer.rs
nodedb-fts/src/lsm/: compaction.rs  memtable.rs  merge.rs  mod.rs  parallel_build.rs  query.rs
nodedb-fts/src/lsm/segment/: format.rs  reader.rs  writer.rs
nodedb-fts/src/search/: bm25_search.rs  fuzzy_search.rs  mod.rs
nodedb-fts/src/search/bmw/: heap.rs  mod.rs  query.rs  scorer.rs  skip_index.rs
nodedb-graph/: Cargo.toml
nodedb-graph/src/: csr.rs  csr_persist.rs  error.rs  lib.rs  sharded.rs  traversal.rs
nodedb-graph/src/csr/: compaction.rs  dense_array.rs  index.rs  local_node_id.rs  memory.rs  mod.rs  persist.rs  slice_accessors.rs  statistics.rs  weights.rs
nodedb-graph/src/csr/index/: interning.rs  lookup.rs  mod.rs  mutation.rs  tests.rs  types.rs
nodedb-lite/: Cargo.toml
nodedb-lite-ffi/: Cargo.toml
nodedb-lite-ffi/include/: nodedb_lite.h
nodedb-lite-ffi/kotlin/com/nodedb/lite/: NodeDbLite.kt
nodedb-lite-ffi/src/: ffi_document.rs  jni_bridge.rs  lib.rs
nodedb-lite-wasm/: Cargo.toml
nodedb-lite-wasm/src/: lib.rs  opfs_backend.rs  storage.rs
nodedb-query/: Cargo.toml
nodedb-query/src/: cast.rs  chunk_text.rs  expr.rs  expr_parse.rs  functions.rs  geo_functions.rs  json_ops.rs  lib.rs  metadata_filter.rs  scan_filter.rs  text_search.rs  value_ops.rs  window.rs
nodedb-query/src/functions/: array.rs  conditional.rs  datetime.rs  id.rs  json.rs  math.rs  mod.rs  shared.rs  string.rs  types.rs
nodedb-query/src/msgpack_scan/: aggregate.rs  field.rs  filter.rs  group_key.rs  index.rs  mod.rs  reader.rs  sidecar.rs  writer.rs
nodedb-query/src/scan_filter/: mod.rs
nodedb-query/src/simd_filter/: avx2.rs  avx512.rs  bitmask.rs  mod.rs  neon.rs  runtime.rs  scalar.rs  tests.rs  wasm.rs
nodedb-query/src/ts_functions/: interpolate.rs
nodedb-raft/: Cargo.toml
nodedb-spatial/: Cargo.toml
nodedb-sql/: Cargo.toml
nodedb-vector/: Cargo.toml
nodedb-vector/src/: batch_distance.rs  build.rs  distance.rs  error.rs  flat_neighbors.rs  hnsw.rs  lib.rs  mmap_segment.rs  search.rs
nodedb-vector/src/collection/: search.rs
nodedb-vector/src/hnsw/: search.rs
nodedb-vector/tests/: mmap_segment_madvise.rs
nodedb-wal/: Cargo.toml
synapsedb-mem/: Cargo.toml
synapsedb-raft/: Cargo.toml
(+1159 files in other folders)
