[package]
name = "nodedb-document"
description = "Shared document engine (text analysis, BM25, inverted index) for NodeDB Origin and Lite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
rust-stemmers = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
