[package]
name = "nodedb-document"
description = "Shared document engine (text analysis, BM25, inverted index) for NodeDB Origin and Lite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
nodedb-fts = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
