[package]
name = "nodedb-fts"
description = "Shared full-text search engine for NodeDB — inverted index, BM25 scoring, analyzers, fuzzy matching"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
rust-stemmers = { workspace = true }
unicode-normalization = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
