[package]
name = "nodedb-query"
description = "Shared query evaluation engine for NodeDB — expressions, filters, functions, aggregations, window functions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
nodedb-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
