[package]
name = "nodedb-vector"
description = "Shared vector engine (HNSW index + distance functions) for NodeDB Origin and Lite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
nodedb-types = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
